--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,13 @@
         <div class="grid">
             <a class="card" href="chat-index.html">
                 <h2>AI CHAT</h2>
-                <p>챗봇 사이트로 이동하여 캐릭터를 생성하고 대화 기록을 관리합니다.</p>
+                <p>AI CHAT 프롬프트를 제작/개발하여 플레이·테스트</p>
+                <span class="cta">바로 가기 →</span>
+            </a>
+
+            <a class="card" href="story-maker.html">
+                <h2>스토리 제작 통합 제작기</h2>
+                <p>스토리 플롯·캐릭터·세계관을 한 번에 설계하는 통합 제작 워크플로우.</p>
                 <span class="cta">바로 가기 →</span>
             </a>
 
@@ -102,6 +108,40 @@
                 <p>연속/메모 모드로 이미지 생성, 레퍼런스·varietyPlus·다운로드 지원.</p>
                 <span class="cta">바로 가기 →</span>
             </a>
+        </div>
+
+        <div id="api-guide" style="margin-top:18px; background: transparent; border:none; box-shadow:none; padding:0;">
+            <div style="background: var(--card); border:1px solid var(--border); border-radius:12px; padding:20px;">
+                <h2 style="margin-bottom:12px;">API Key 발급 가이드</h2>
+                <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:16px;">
+                    <div style="border:1px solid var(--border); border-radius:10px; padding:14px;">
+                        <h3 style="margin-bottom:8px;">1. Google Gemini API Key</h3>
+                        <ol style="color: var(--muted); line-height:1.5; padding-left:18px;">
+                            <li>AI STUDIO 접속: <a href="https://aistudio.google.com/api-keys" target="_blank" style="color: var(--accent);">https://aistudio.google.com/api-keys</a></li>
+                            <li>왼쪽 하단 <b>Get API Key</b> 클릭</li>
+                            <li><b>API 키 만들기</b> 클릭</li>
+                            <li>프로젝트 선택 → <b>Create project</b> → 이름 입력 후 생성</li>
+                            <li>키 이름 지정 후 생성</li>
+                            <li><b>결제 설정</b> 클릭</li>
+                            <li>결제 정보, 카드 정보 등 입력 후 가입</li>
+                            <li>생성된 API KEY를 ai_chat_main 사이트 입력란에 붙여넣기</li>
+                            <li>완료</li>
+                        </ol>
+                    </div>
+                    <div style="border:1px solid var(--border); border-radius:10px; padding:14px;">
+                        <h3 style="margin-bottom:8px;">2. NovelAI API Key</h3>
+                        <ol style="color: var(--muted); line-height:1.5; padding-left:18px;">
+                            <li>NovelAI 사이트 접속: <a href="https://novelai.net/" target="_blank" style="color: var(--accent);">https://aistudio.google.com/api-keys</a></li>
+                            <li>Login</li>
+                            <li><b>User Setting → Account</b> 클릭</li>
+                            <li><b>Get Persistent API Token</b> 클릭</li>
+                            <li>발급받은 API Key 복사</li>
+                            <li>원하는 입력란에 붙여넣고 사용</li>
+                            <li>완료</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
